sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Payload_Mapping__mdt/Inbound_Ingestion_Payload_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-16349: It is used to store the Mulesoft payload attribute and corresponding Salesforce field mappings.</description>
    <label>Inbound Ingestion Payload Mapping</label>
    <pluralLabel>Inbound Ingestion Payload Mappings</pluralLabel>
</CustomObject>