sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Payload_Mapping__mdt/fields/Attribute_Key__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Key__c</fullName>
    <label>Attribute Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>