sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Payload_Mapping__mdt/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSMO</fullName>
                <default>true</default>
                <label>SSMO</label>
            </value>
            <value>
                <fullName>SSOB</fullName>
            </value>
            <value>
                <fullName>Mx Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>