sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Payload_Mapping__mdt/fields/Payload_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Payload_Attribute__c</fullName>
    <label>Payload Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>